Wyeliminowanie pustej listy dla studenta który nie ma oczekujących na ocenę

--- a/LanguageSchool/Views/Group/StudentDetails.cshtml
+++ b/LanguageSchool/Views/Group/StudentDetails.cshtml
@@ -52,29 +52,32 @@
         </div>
     </div>
 
-    @Html.Partial("_PartHeader", "Pytania otwarte oczekujące na ocenę")
-    @foreach (var test in Model.AwaitingMark)
+    @if (Model.AwaitingMark.Any())
     {
-        @Html.Partial("_PartHeader", test.TestName)
-        <div class="row">
-            <div class="bordered col-md-12">
-                <table class="table table-striped table-bordered">
-                    <tr>
-                        <th>
-                            Treść pytania
-                        </th>
-                        <th>
-                            Udzielona odpowiedź
-                        </th>
-                        <th>
-                            Punkty do uzyskania
-                        </th>
-                        <th>
-                            Komentarz
-                        </th>
-                    </tr>
+        @Html.Partial("_PartHeader", "Pytania otwarte oczekujące na ocenę")
 
-                    @foreach (var item in test.AnswersAwaitingMark)
+        foreach (var test in Model.AwaitingMark)
+        {
+            @Html.Partial("_PartHeader", test.TestName)
+            <div class="row">
+                <div class="bordered col-md-12">
+                    <table class="table table-striped table-bordered">
+                        <tr>
+                            <th>
+                                Treść pytania
+                            </th>
+                            <th>
+                                Udzielona odpowiedź
+                            </th>
+                            <th>
+                                Punkty do uzyskania
+                            </th>
+                            <th>
+                                Komentarz
+                            </th>
+                        </tr>
+
+                        @foreach (var item in test.AnswersAwaitingMark)
                     {
                         var shownContent = item.Content;
 
@@ -104,10 +107,11 @@
                                 <td align="center"> - </td>
                             }
                         </tr>
-                    }
-                </table>
+                        }
+                    </table>
+                </div>
             </div>
-        </div>
+        }
     }
 
     @Html.Partial("_PartHeader", "Testy ocenione")
