--- a/LanguageSchool/Views/LessonSubject/LessonSubjects.cshtml
+++ b/LanguageSchool/Views/LessonSubject/LessonSubjects.cshtml
@@ -55,7 +55,7 @@
                             Liczba pytań
                         </th>
                     </tr>
-                    @foreach (var test in Model.Tests.Where(t => t.IsActive))
+                    @foreach (var test in Model.Tests)
                     {
                         <tr>
                             <td>
