--- a/LanguageSchool/Views/Group/PickHours.cshtml
+++ b/LanguageSchool/Views/Group/PickHours.cshtml
@@ -10,6 +10,7 @@
     @Html.HiddenFor(model => model.GroupId)
     @Html.HiddenFor(model => model.CourseId)
     @Html.HiddenFor(model => model.Name)
+    @Html.HiddenFor(model => model.TeacherId)
     @Html.HiddenFor(model => model.Teacher.Id)
     @Html.HiddenFor(model => model.StartDate)
     @Html.HiddenFor(model => model.EndDate)
