Zabezpieczenie przed możliwością utworzenia testu dla pustego tematu

--- a/LanguageSchool/Views/Group/Details.cshtml
+++ b/LanguageSchool/Views/Group/Details.cshtml
@@ -166,7 +166,7 @@
             </div>
         </div>
     }
-    @if (Model.LessonSubjects.Any())
+    @if (Model.AreAnyQuestions)
     {
         <div class="row">
             <div class="col-md-3 col-md-offset-7">
