Edycja dla szerokości buttona dla aktywacji testu

--- a/LanguageSchool/Views/Group/Details.cshtml
+++ b/LanguageSchool/Views/Group/Details.cshtml
@@ -129,6 +129,8 @@
                         <th>
                             Punkty
                         </th>
+                        <th style="width:30px">
+                        </th>
                     </tr>
                     @foreach (var test in Model.Tests)
                     {
