--- a/LanguageSchool/Views/Test/Create.cshtml
+++ b/LanguageSchool/Views/Test/Create.cshtml
@@ -69,6 +69,9 @@
                             <th>
                                 Liczba otwartych pytań
                             </th>
+                            <th>
+                                Wybierz
+                            </th>
                         </tr>
 
                         @for (var i = 0; i < Model.LessonSubjects.Count; i++)
@@ -81,6 +84,8 @@
                             if (Model.LessonSubjects[i].MaxNumberOfClosedQuestions != 0
                                 || Model.LessonSubjects[i].MaxNumberOfOpenQuestions != 0)
                             {
+                                var func = "enableRow(" + i + ")";
+
                                 <tr style="background:whitesmoke;color:silver" id="@i">
                                     <td>
                                         @Model.LessonSubjects[i].Name
@@ -104,13 +109,11 @@
                                         <p/>
                                         @Html.ValidationMessageFor(model => model.LessonSubjects[i].NumberOfOpenQuestions, "", new { @class = "text-danger" })
                                     </td>
-                                    <td>
-                                        <label class="btn btn-default btn-block" onclick="enableRow(@i)">
-                                            <label style="display: none">
-                                                @Html.EditorFor(model => model.LessonSubjects[i].IsMarked)
-                                            </label>
-                                            Wybierz
-                                        </label>
+                                    <td onclick="@func">
+                                        @*@Html.EditorFor(model => model.LessonSubjects[i].IsMarked)*@
+                                        @Html.CheckBoxFor(model => model.LessonSubjects[i].IsMarked, new { @onclick = func })
+                                        @*@Html.CheckBox("LessonSubjects[" + i + "].IsMarked", (bool)@Model.LessonSubjects[i].IsMarked, new { @onclick = "enableRow(" + i + ")" })*@
+                                        @*<input type="checkbox" onclick="enableRow(" + i + ")">*@
                                     </td>
                                 </tr>
                             }
@@ -132,12 +135,13 @@
 
     function enableForm() {
         var total = @Model.LessonSubjects.Count;
-
-        debugger;
-
+        
         for (i = 0; i < total; i++) {
             var answerClosed = document.getElementById("LessonSubjects_" + i + "__NumberOfClosedQuestions"),
-                answerOpen = document.getElementById("LessonSubjects_" + i + "__NumberOfOpenQuestions");
+                answerOpen = document.getElementById("LessonSubjects_" + i + "__NumberOfOpenQuestions"),
+                isMarked = document.getElementById("LessonSubjects_" + rowId + "__IsMarked");
+    
+            isMarked.checked = false;
 
             if(answerClosed.value > 0 || answerOpen.value > 0 ) {
                 enableRow(i);
@@ -150,7 +154,10 @@
             numberClosed = document.getElementById("numberClosed" + rowId),
             numberOpen = document.getElementById("numberOpen" + rowId),
             answerClosed = document.getElementById("LessonSubjects_" + rowId + "__NumberOfClosedQuestions"),
-            answerOpen = document.getElementById("LessonSubjects_" + rowId + "__NumberOfOpenQuestions");
+            answerOpen = document.getElementById("LessonSubjects_" + rowId + "__NumberOfOpenQuestions"),
+            isMarked = document.getElementById("LessonSubjects_" + rowId + "__IsMarked");
+
+        debugger;
 
         if (row.style.color == "black") {
             row.style.background = "whitesmoke";
@@ -158,6 +165,8 @@
 
             answerClosed.disabled = true;
             answerOpen.disabled = true;
+            
+            isMarked.checked = false;
         }
         else {
             row.style.background = "white";
@@ -170,6 +179,8 @@
             if(numberOpen.value != 0) {
                 answerOpen.disabled = false;
             }
+            
+            isMarked.checked = true;
         }
 
 
