Poprawa pozycji przycisku aktywacji na liście testów

--- a/LanguageSchool/Views/Group/Details.cshtml
+++ b/LanguageSchool/Views/Group/Details.cshtml
@@ -159,7 +159,7 @@
                             <td>
                                 @test.Points
                             </td>
-                            <td>
+                            <td align="center">
                                 <button class="btn btn-default" type="button" onclick="location.href='@Url.Action("DeActivate", "Test", new { id = test.Id })'">@activateButtonValue</button>
                             </td>
                         </tr>
