Uprzątnięcie pozostałości po testach wejściowych, zabezpieczenie dla testów które nie mają pytań zamkniętych

--- a/LanguageSchool/Views/Test/Take.cshtml
+++ b/LanguageSchool/Views/Test/Take.cshtml
@@ -112,6 +112,10 @@
     {
         var closedQuestions = document.getElementById("closedQuestions");
 
+        if (closedQuestions == null) {
+            document.getElementById("test").submit();
+        }
+
         var inputs = closedQuestions.getElementsByTagName("input");
 
         var i;
