Zmiana tego co wyświetlane jest na onhover w przypadku użytkownika

--- a/LanguageSchool/Views/Shared/_LoginPartial.cshtml
+++ b/LanguageSchool/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink(User.Identity.GetUserName(), "Index", "Message", routeValues: null, htmlAttributes: new { title = "Manage", style = "color:white" })
+            @Html.ActionLink(User.Identity.GetUserName(), "Index", "Message", routeValues: null, htmlAttributes: new { title = "Moje komunikaty", style = "color:white" })
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()"><font color="white">Wyloguj</font></a></li>
     </ul>
