Wystawienie liczby w widoku grupy

--- a/LanguageSchool/Views/Group/Details.cshtml
+++ b/LanguageSchool/Views/Group/Details.cshtml
@@ -154,7 +154,7 @@
                                 @test.Comment
                             </td>
                             <td>
-                                @test.NumberOfClosedQuestions/@test.NumberOfOpenQuestions/@(test.NumberOfOpenQuestions + test.NumberOfClosedQuestions)
+                                @test.NumberOfClosedQuestions/@test.NumberOfOpenQuestions/@test.NumberOfQuestions
                             </td>
                             <td>
                                 @test.Points
