Poprawka przywracania wartości na liście

--- a/LanguageSchool/Views/UserData/List.cshtml
+++ b/LanguageSchool/Views/UserData/List.cshtml
@@ -282,9 +282,7 @@
 
         var firstDayOfMonth = new Date(currentYear, currentMonth, 2);
 
-        //daty - todo
-
-        debugger;
+        //daty
 
         var creationDateFrom = document.getElementById("creationDateFrom");
         var creationDateTo = document.getElementById("creationDateTo");
@@ -327,7 +325,9 @@
         var showUserData = document.getElementById("showUserData");
         var showContactRequests = document.getElementById("showContactRequests");
 
-        showUserData.value = false;
-        showContactRequests.value = true;
+        debugger;
+
+        showUserData.checked = false;
+        showContactRequests.checked = true;
     }
 </script>
