--- a/LanguageSchool/Views/Course/List.cshtml
+++ b/LanguageSchool/Views/Course/List.cshtml
@@ -143,7 +143,7 @@
         var showDeactivated = document.getElementById("showDeactivated");
 
         search.value = "";
-        showActivated.value = true;
-        showDeactivated.value = false;
+        showActivated.checked = true;
+        showDeactivated.checked = false;
     }
 </script>
