Poprawki przy zapisywaniu studentów do grup oraz edycji grupy

--- a/LanguageSchool/Views/Group/Edit.cshtml
+++ b/LanguageSchool/Views/Group/Edit.cshtml
@@ -8,6 +8,8 @@
 @using (Html.BeginForm())
 {
     @Html.HiddenFor(model => model.GroupId)
+    @Html.HiddenFor(model => model.CourseName)
+    @Html.HiddenFor(model => model.CourseNumberOfHours)
 
     @Html.AntiForgeryToken()
 
