--- a/LanguageSchool/Views/Test/Taken.cshtml
+++ b/LanguageSchool/Views/Test/Taken.cshtml
@@ -90,7 +90,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            @question.Answer
+                            @Html.Raw(@question.Answer)
                         </div>
                         <div class="control-label col-md-2">
                             <strong>Komentarz</strong>
