--- a/LanguageSchool/Views/UserOpenAnswer/Mark.cshtml
+++ b/LanguageSchool/Views/UserOpenAnswer/Mark.cshtml
@@ -22,7 +22,7 @@
                         <strong>Odpowiedź</strong>
                     </div>
                     <div class="col-md-11">
-                        @Html.DisplayFor(model => model.Content)
+                        @Html.Raw(@Model.Content)
                     </div>
                 </div>
             </div>
