--- a/LanguageSchool/Views/Message/Index.cshtml
+++ b/LanguageSchool/Views/Message/Index.cshtml
@@ -63,13 +63,9 @@
 
         <p />
 
-        <div class="col-md-5">
-        </div>
-        <div class="col-md-3">
+        <div class="col-md-12" align="center">
             @Html.PagedListPager(Model, page => Url.Action("Index",
             new { sortColumn = ViewBag.sortColumn, sortDirection = ViewBag.sortDirection, page }))
-        </div>
-        <div class="col-md-4">
         </div>
     </div>
 </div>
