--- a/LanguageSchool/Views/Home/Default.cshtml
+++ b/LanguageSchool/Views/Home/Default.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Szkoła językowa BeLingua";
 }
 
 <body background="~/images/Background_home.jpg">
