--- a/LanguageSchool/Views/Shared/_Layout.cshtml
+++ b/LanguageSchool/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Szkoła językowa BeLingua</title>
+    <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/Site.css")
     @Styles.Render("~/Content/home_marketable.css")
