--- a/LanguageSchool/Views/Message/Index.cshtml
+++ b/LanguageSchool/Views/Message/Index.cshtml
@@ -1,4 +1,6 @@
 ﻿@using PagedList.Mvc;
+@using LanguageSchool.Models.ViewModels;
+
 @model PagedList.IPagedList<LanguageSchool.Models.ViewModels.MessageViewModels.UserMessageShortDetailsVM>
 
 @{
@@ -12,16 +14,13 @@
             <table class="table table-striped table-bordered">
                 <tr>
                     <th>
-                        @Html.ActionLink("Data wysłania", "Index", new { sortColumn = "SentDate", sortDirection = ViewBag.sortDirection, page = 1 },
-                         new { style = "text-decoration:none; color:black" })
+                        @Html.Partial("_BasicIndSortHeader", new TableHeaderViewModel("Data wysłania", "SentDate"))
                     </th>
                     <th>
-                        @Html.ActionLink("Data odczytania", "Index", new { sortColumn = "ReceivedDate", sortDirection = ViewBag.sortDirection, page = 1 },
-                         new { style = "text-decoration:none; color:black" })
+                        @Html.Partial("_BasicIndSortHeader", new TableHeaderViewModel("Data odczytania", "ReceivedDate"))
                     </th>
                     <th>
-                        @Html.ActionLink("Tytuł", "Index", new { sortColumn = "Topic", sortDirection = ViewBag.sortDirection, page = 1 },
-                         new { style = "text-decoration:none; color:black" })
+                        @Html.Partial("_BasicIndSortHeader", new TableHeaderViewModel("Tytuł", "Topic"))
                     </th>
                     <th>
                         Treść
