Pudrowanie aplikacji - nazwy dla tabek, favicon

--- a/LanguageSchool/Views/Account/Login.cshtml
+++ b/LanguageSchool/Views/Account/Login.cshtml
@@ -1,5 +1,9 @@
 ﻿@model LanguageSchool.Models.ViewModels.LoginViewModel
 
+@{
+    ViewBag.Title = "Zaloguj się";
+}
+
 <body background="~/images/Background_contact_faded.jpg">
     <div class="row">
         <div class="col-md-8">
