--- a/LanguageSchool/Views/ContactRequest/Details.cshtml
+++ b/LanguageSchool/Views/ContactRequest/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LanguageSchool.Models.ViewModels.ContactRequestViewModels.ContactRequestsDetailsVM
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Prośba o kontakt";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
