--- a/LanguageSchool/Views/ContactRequest/Edit.cshtml
+++ b/LanguageSchool/Views/ContactRequest/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LanguageSchool.Models.ViewModels.ContactRequestViewModels.ContactRequestInputVM
 
 @{
-    ViewBag.Title = "Prośba o kontakt";
+    ViewBag.Title = "Edytuj prośbę o kontakt";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
