--- a/LanguageSchool/Views/Course/Create.cshtml
+++ b/LanguageSchool/Views/Course/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LanguageSchool.Models.ViewModels.CourseViewModels.CourseInputVM
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Utwórz kurs";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
