--- a/LanguageSchool/Views/Group/AddUsers.cshtml
+++ b/LanguageSchool/Views/Group/AddUsers.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LanguageSchool.Models.ViewModels.UsersGroupViewModel
 
 @{
-    ViewBag.Title = "AddUsers";
+    ViewBag.Title = "Dodaj studentów";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
