--- a/LanguageSchool/Views/Group/Details.cshtml
+++ b/LanguageSchool/Views/Group/Details.cshtml
@@ -2,7 +2,7 @@
 @model LanguageSchool.Models.ViewModels.GroupViewModels.TeacherGroupDetailsVM
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Grupa";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
