--- a/LanguageSchool/Views/Group/StudentDetails.cshtml
+++ b/LanguageSchool/Views/Group/StudentDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LanguageSchool.Models.ViewModels.StudentGroupViewModels.StudentGroupVM
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Student";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
