--- a/LanguageSchool/Views/LessonSubject/Details.cshtml
+++ b/LanguageSchool/Views/LessonSubject/Details.cshtml
@@ -3,7 +3,7 @@
 @model LanguageSchool.Models.LessonSubject
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Temat lekcji";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="container">
