--- a/LanguageSchool/Views/LessonSubject/Edit.cshtml
+++ b/LanguageSchool/Views/LessonSubject/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LanguageSchool.Models.ViewModels.LessonSubjectViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edytuj temat lekcji";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
