--- a/LanguageSchool/Views/LessonSubject/LessonSubjects.cshtml
+++ b/LanguageSchool/Views/LessonSubject/LessonSubjects.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LanguageSchool.Models.ViewModels.GroupStudentVM
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Grupa";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
