--- a/LanguageSchool/Views/Material/Upload.cshtml
+++ b/LanguageSchool/Views/Material/Upload.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LanguageSchool.Models.ViewModels.MaterialViewModel
 
 @{
-    ViewBag.Title = "Upload";
+    ViewBag.Title = "Dodaj materiały";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
