--- a/LanguageSchool/Views/Message/Index.cshtml
+++ b/LanguageSchool/Views/Message/Index.cshtml
@@ -4,7 +4,7 @@
 @model PagedList.IPagedList<LanguageSchool.Models.ViewModels.MessageViewModels.UserMessageShortDetailsVM>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Moje komunikaty";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
