--- a/LanguageSchool/Views/Message/Send.cshtml
+++ b/LanguageSchool/Views/Message/Send.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LanguageSchool.Models.ViewModels.MessageViewModels.MessageInputVM
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Wyślij komunikat masowy";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
