--- a/LanguageSchool/Views/Message/SendToUser.cshtml
+++ b/LanguageSchool/Views/Message/SendToUser.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LanguageSchool.Models.ViewModels.MessageViewModels.SendToUserInputVM
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Wyślij komunikat";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
