--- a/LanguageSchool/Views/Question/AddAnswers.cshtml
+++ b/LanguageSchool/Views/Question/AddAnswers.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LanguageSchool.Models.ViewModels.ClosedQuestionViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Dodaj pytanie";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
