--- a/LanguageSchool/Views/Question/Index.cshtml
+++ b/LanguageSchool/Views/Question/Index.cshtml
@@ -3,7 +3,7 @@
 @model LanguageSchool.Models.ViewModels.SubjectsQuestionsViewModel
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Pytania z tematu";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
