--- a/LanguageSchool/Views/Test/Take.cshtml
+++ b/LanguageSchool/Views/Test/Take.cshtml
@@ -3,7 +3,7 @@
 @model LanguageSchool.Models.ViewModels.TestViewModel
 
 @{
-    ViewBag.Title = "TakeTest";
+    ViewBag.Title = "Test";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
