--- a/LanguageSchool/Views/Test/Taken.cshtml
+++ b/LanguageSchool/Views/Test/Taken.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LanguageSchool.Models.ViewModels.TakenTestViewModels.TakenTestVM
 
 @{
-    ViewBag.Title = "TakeTest";
+    ViewBag.Title = "Test";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
