--- a/LanguageSchool/Views/User/TimeTable.cshtml
+++ b/LanguageSchool/Views/User/TimeTable.cshtml
@@ -12,7 +12,7 @@
 @model TimeTableViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Plan zajęć";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
