--- a/LanguageSchool/Views/Course/List.cshtml
+++ b/LanguageSchool/Views/Course/List.cshtml
@@ -4,7 +4,7 @@
 @model PagedList.IPagedList<LanguageSchool.Models.Course>
 
 @{
-    ViewBag.Title = "SecretaryIndex";
+    ViewBag.Title = "Lista kursów";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="container-fluid">
