--- a/LanguageSchool/Views/Group/Create.cshtml
+++ b/LanguageSchool/Views/Group/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LanguageSchool.Models.ViewModels.GroupViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Utwórz grupę";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
