--- a/LanguageSchool/Views/Group/FullDetails.cshtml
+++ b/LanguageSchool/Views/Group/FullDetails.cshtml
@@ -3,7 +3,7 @@
 @model LanguageSchool.Models.ViewModels.GroupViewModels.SecretaryGroupDetailsVM
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Grupa";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
