--- a/LanguageSchool/Views/LessonSubject/CreateFromExisting.cshtml
+++ b/LanguageSchool/Views/LessonSubject/CreateFromExisting.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LanguageSchool.Models.ViewModels.ExistingLessonSubjectsVM
 
 @{
-    ViewBag.Title = "CreateFromExisting";
+    ViewBag.Title = "Utwórz temat lekcji";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
