--- a/LanguageSchool/Views/Material/Index.cshtml
+++ b/LanguageSchool/Views/Material/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<LanguageSchool.Models.Material>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Materiały";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
