--- a/LanguageSchool/Views/Message/Details.cshtml
+++ b/LanguageSchool/Views/Message/Details.cshtml
@@ -3,7 +3,7 @@
 @model LanguageSchool.Models.ViewModels.MessageViewModels.UserMessageDetailsVM
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Komunikat";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
