--- a/LanguageSchool/Views/Question/CreateOpen.cshtml
+++ b/LanguageSchool/Views/Question/CreateOpen.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LanguageSchool.Models.ViewModels.OpenQuestionViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Dodaj pytanie";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
