--- a/LanguageSchool/Views/Test/Create.cshtml
+++ b/LanguageSchool/Views/Test/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LanguageSchool.Models.ViewModels.TestViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Utwórz test";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
