--- a/LanguageSchool/Views/UserData/AddGroups.cshtml
+++ b/LanguageSchool/Views/UserData/AddGroups.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LanguageSchool.Models.ViewModels.UsersGroupViewModel
 
 @{
-    ViewBag.Title = "AddUsers";
+    ViewBag.Title = "Przypisz do grupy";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
