--- a/LanguageSchool/Views/UserData/Details.cshtml
+++ b/LanguageSchool/Views/UserData/Details.cshtml
@@ -3,7 +3,7 @@
 @model LanguageSchool.Models.UserData
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Użytkownik";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
