--- a/LanguageSchool/Views/UserData/Edit.cshtml
+++ b/LanguageSchool/Views/UserData/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LanguageSchool.Models.ViewModels.UserDataViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edytuj użytkownika";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
