--- a/LanguageSchool/Views/UserData/List.cshtml
+++ b/LanguageSchool/Views/UserData/List.cshtml
@@ -4,7 +4,7 @@
 @model PagedList.IPagedList<LanguageSchool.Models.GetContactInfoListItem>
 
 @{
-    ViewBag.Title = "List";
+    ViewBag.Title = "Dane kontaktowe";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
