--- a/LanguageSchool/Views/Question/CreateClosed.cshtml
+++ b/LanguageSchool/Views/Question/CreateClosed.cshtml
@@ -18,7 +18,7 @@
                 <div class="row">
                     <div class="form-group">
                         <div class="control-label col-md-2">
-                            <strong>Treść</strong>
+                            <strong>Treść pytania</strong>
                         </div>
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.Contents, new { htmlAttributes = new { @class = "widetextarea form-control", @style = "width:800px" } })
@@ -29,7 +29,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="form-group">
-                            <div class="control-label col-md-7">
+                            <div class="control-label col-md-6">
                                 <strong>Wyświetlane</strong>
                             </div>
                             <div class="col-md-3">
@@ -40,7 +40,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="form-group">
-                            <div class="control-label col-md-7">
+                            <div class="control-label col-md-4">
                                 <strong>Punkty</strong>
                             </div>
                             <div class="col-md-3">
@@ -51,7 +51,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="form-group">
-                            <div class="control-label col-md-7">
+                            <div class="control-label col-md-6">
                                 <strong>Wielokrotnego wyboru</strong>
                             </div>
                             <div class="col-md-3">
